fix(cart): updating dark mode hover color

--- a/components/Buttons/Buttons.module.css
+++ b/components/Buttons/Buttons.module.css
@@ -14,9 +14,6 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .cart {
-        filter: brightness(0) invert(1)
-    }
 
     .cart:hover,
     .cartActive:hover {
